# rust-playground

./: Cargo.toml
src/: guid.rs  main.rs  mediator.rs
src/routes/: date.rs  mod.rs  todo.rs
src/services/: aggregate.rs  data.rs  date.rs  event_store.rs  mod.rs  todo.rs
