[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rocket_codegen = "0.5.0-rc.2"
dotenv = "0.15.0"
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.85"
serde_bson = "0.0.1"
env_logger = "0.9.1"
log = "0.4.17"
chrono = "0.4.22"
uuid = {version = "1.2.1", features = ["v4", "fast-rng", "macro-diagnostics"]}